[package]
name = "digsite"
version = "0.1.0"
edition = "2021"
default-run = "digsite"

[[bin]]
name = "playground"
path = "bin/playground.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
bitvec = { version = "1.0.1", features = ["serde"] }
dashmap = { version = "5.5.3", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_qs = "0.12.0"
socketioxide = { version = "0.12.0", features = ["extensions", "state"] }
tokio = { version =  "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
